<resources>
    <string name="app_name">QQA Note</string>
    <string name="c_i_t_k_ch_th_c_ch">Cài đặt kích thước chữ</string>
    <string name="c_i_t_th_i_gian_xo_ghi_ch_t_ng">Cài đặt thời gian xoá ghi chú tự động</string>
    <string name="c_i_t_m_thanh_th_ng_b_o">Cài đặt âm thanh thông báo</string>
    <string name="ng_xu_t">Đăng xuất</string>
    <string name="i_m_t_kh_u">Đổi mật khẩu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="m_t_kh_u_hi_n_t_i">Mật khẩu hiện tại</string>
    <string name="m_t_kh_u_m_i">Mật khẩu mới</string>
    <string name="nh_p_l_i_m_t_kh_u_m_i">Nhập lại mật khẩu mới</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_description">Channel Description</string>

</resources>