<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="Hệ thống">
        <menu>
            <item
            android:id="@+id/font_change"
            android:icon="@drawable/ic_font"
            android:title="Điều chỉnh phông chữ" />
            <item
                android:id="@+id/sound_change"
                android:icon="@drawable/ic_sound_setting"
                android:title="@string/c_i_t_m_thanh_th_ng_b_o" />
            <item
                android:id="@+id/trash_can"
                android:icon="@drawable/ic_trashcan"
                android:title="Thùng rác"/>
        </menu>

    </item>

    <item
        android:title="Tài khoản">
        <menu>
            <item
                android:id="@+id/auth_nav"
                android:icon="@drawable/ic_authen"
                android:title="Xác thực tài khoản"/>
            <item
                android:id="@+id/change_password"
                android:icon="@drawable/ic_change_password"
                android:title="@string/i_m_t_kh_u" />
            <item android:id="@+id/log_out"
                android:title="@string/ng_xu_t"
                android:icon="@drawable/ic_exit"/>
        </menu>
    </item>
 </menu>