<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#f0e3c3">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/m_t_kh_u_hi_n_t_i"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edt_currentPassword"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/m_t_kh_u_m_i"
                    android:layout_marginTop="10dp"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edt_newPassword"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="#000000"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/nh_p_l_i_m_t_kh_u_m_i"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edt_newPasswordConfirm"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_changePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Đổi mật khẩu"
                    android:layout_gravity="center"
                    android:backgroundTint="#000000"
                    android:textSize="15sp"/>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>